--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
     "id": "orchestrator",
-    "filter": "devops",
-    "image": "http://code.purestorage.com/images/packageicon.png",
-    "featured": 1,
+    "name": "vRealize Orchestrator Workflows & Packages",
+    "filter": "virtualization",
+    "image": "https://code.purestorage.com/images/packageicon.png",
+    "featured": 0,
     "priority": 1
 }
